...
    <string name="private_friends">Do you want to run with friends, or alone?</string>
    <string name="public_yes_friends">Yes, I want to add friends</string>
    <string name="public_no_friends">No, just create it</string>
    <string name="private_yes_friends">I want to add friends</string>
    <string name="private_no_friends">I want to run alone</string>

    <string name="edit_meeting_close_dialog_message">Are you sure you want to close without saving?</string>
    <string name="edit_meeting_close_dialog_title">Closing without saving</string>
    <string name="friend_request_dialog_message">Are you sure you want to send a friend request to</string>
    <string name="friend_request_dialog_title">Friend request</string>
    <string name="delete_friend_dialog_message">Are you sure you want to stop being friends with</string>
    <string name="delete_friend_dialog_title">Stop being friends</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
...
